remove 'base' param; remove unused svg

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ import Menu from '../components/Hamburger.astro';
 	<body>
 		<img id="background" src={background.src} alt="" fetchpriority="high" />
 		<a href="/"
-				><img src={teaLogo.src} width="400" height="400" alt="Peppa's tea party" /></a>
+				><img src={teaLogo.src} width="400" height="400" alt="Formosa Tea" /></a>
 		<Menu />
 		<slot />
 	</body>
