--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,8 +31,10 @@ import Menu from '../components/Hamburger.astro';
 		letter-spacing: .075rem;
 		line-height: 1.5;
 		text-align: center;
-		padding: 20px;
-		display: flex;
+		padding: 80px;
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
 		justify-content: center;
 		align-items: center;
 		flex-direction: column;
