adjusted for mobile site

--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -37,26 +37,26 @@
         margin: 0;
         overflow: hidden;
         margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
-    unicode-bidi: isolate;
+        margin-block-end: 1em;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+        padding-inline-start: 40px;
+        unicode-bidi: isolate;
     }
 
     a {
         background-color: transparent;
-    color: #695651;
-    text-decoration: none;
-    text-decoration-thickness: 1px;
-    text-underline-offset: 3px;
-    transition: all .2s linear
+        color: #695651;
+        text-decoration: none;
+        text-decoration-thickness: 1px;
+        text-underline-offset: 3px;
+        transition: all 0.2s linear;
     }
 
     .main-menu {
         width: 100%;
         margin: 0 auto;
-        display:block;
+        display: block;
         align-items: center;
         z-index: 1;
     }
