--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,16 +25,15 @@ import Menu from '../components/Hamburger.astro';
 	html {
 		color: #695651;
 		font-family: HelveticaNeue-Light,"Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,sans-serif;
-		height: 100%;
+		height: 80vh;
+		width: 90%;
 		font-size: 1rem;
 		font-weight: 400;
 		letter-spacing: .075rem;
 		line-height: 1.5;
 		text-align: center;
-		padding: 80px;
-		display: block;
-		margin-left: auto;
-		margin-right: auto;
+		padding: 40px;
+		display: flex;
 		justify-content: center;
 		align-items: center;
 		flex-direction: column;
