add contact email; add tea descriptions

--- a/src/pages/tea.astro
+++ b/src/pages/tea.astro
@@ -2,5 +2,25 @@
 import Layout from '../layouts/Layout.astro';
 ---
 <Layout>
-    hello world
+    <b>Forager's Delight</b> | Species: <i>Camellia formosensis</i>
+    <br>Origin: Liugui, Kaohsiung, Taiwan | Altitude: 1400 metres above sea level
+    <br><i>This white tea is made of a native Taiwanese tea species that is foraged in the mountains rather than harvested at a farm. A velvety mouthfeel with a brush of sweetness, this bright and delicate tea has gentle earthy aromas of mint and cinnamon.</i>
+    <br>
+    <br>
+    <br>
+    <b>Winter Harvest</b> | Variety: Sijichun
+    <br>Origin: Mingjian, Nantou, Taiwan | Altitude: 300-600 metres above sea level
+    <br><i>Silky, low tannins, floral, elegant and balance.</i>
+    <br>
+    <br>
+    <br>
+    <b>Sweet Pearls</b> | Variety: Jin Xuan “Milk Oolong”
+    <br>Origin: Alishan, Chiayi, Taiwan | Altitude: 800-1000 metres above sea level
+    <br><i>Lightly toasted, with hints of molasses and sweet popcorn.</i>
+    <br>
+    <br>
+    <br>
+    <b>Icy Peak</b> | Variety: Qingxin (lit. ‘green heart’)
+    <br>Origin: Lugu, Nantou, Taiwan | Altitude: 600-800 metres above sea level
+    <br><i>Roasted, full-bodied and warming, with a long finish of lingering sweetness reminiscent of honey, cacao, and melon.</i>
 </Layout>
