automatically adjust height

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ import Menu from '../components/Hamburger.astro';
 	html {
 		color: #695651;
 		font-family: HelveticaNeue-Light,"Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,sans-serif;
-		height: 80vh;
+		height: 80vh auto;
 		width: 90%;
 		font-size: 1rem;
 		font-weight: 400;
