--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,6 +6,7 @@ import Menu from '../components/Hamburger.astro';
 <!doctype html>
 <html lang="en">
 	<head>
+		<link rel="sitemap" href="/sitemap-index.xml" />
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
@@ -37,7 +38,7 @@ import Menu from '../components/Hamburger.astro';
 		justify-content: center;
 		align-items: center;
 		flex-direction: column;
-	},
+	}
 	body {
 		margin: 0;
 		width: 100%;
