--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,25 +24,28 @@ import Menu from '../components/Hamburger.astro';
 
 <style>
 	html {
+		align-items: center;
+	}
+	body {
 		color: #695651;
 		font-family: HelveticaNeue-Light,"Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,sans-serif;
 		height: 80vh auto;
-		width: 90%;
+		width: calc(100% -2em);
+		max-width: 100%;
 		font-size: 1rem;
 		font-weight: 400;
 		letter-spacing: .075rem;
 		line-height: 1.5;
+		padding: 30px;
 		text-align: center;
-		padding: 40px;
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		flex-direction: column;
 	}
-	body {
-		margin: 0;
+	img {
+		align-self: center;
 		width: 100%;
-		height: 100%;
 	}
 	#background {
 		position: fixed;
