--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,5 +2,5 @@
 import Layout from '../layouts/Layout.astro';
 ---
 <Layout>
-    hello world
+    Loose leaf oolong tea from Taiwan. Based in SE London, UK.
 </Layout>
