--- a/src/pages/tea.astro
+++ b/src/pages/tea.astro
@@ -2,25 +2,25 @@
 import Layout from '../layouts/Layout.astro';
 ---
 <Layout>
-    <b>Forager's Delight</b> | Species: <i>Camellia formosensis</i>
+    <b>Forager's Delight</b>
     <br>Origin: Liugui, Kaohsiung, Taiwan | Altitude: 1400 metres above sea level
-    <br><i>This white tea is made of a native Taiwanese tea species that is foraged in the mountains rather than harvested at a farm. A velvety mouthfeel with a brush of sweetness, this bright and delicate tea has gentle earthy aromas of mint and cinnamon.</i>
+    <br><i>This white tea is made of a native Taiwanese tea species, Camellia formosensis, that is foraged in the mountains rather than harvested at a farm. A velvety mouthfeel with a brush of sweetness, this bright and delicate tea has gentle earthy aromas of mint and cinnamon.</i>
     <br>
     <br>
     <br>
-    <b>Winter Harvest</b> | Variety: Sijichun
+    <b>Winter Harvest</b>
     <br>Origin: Mingjian, Nantou, Taiwan | Altitude: 300-600 metres above sea level
-    <br><i>Silky, low tannins, floral, elegant and balance.</i>
+    <br><i>Grown from the red laterite soil in Nantou, Taiwan, this healing Sijichun oolong tea is natually sweet with silky low tannins. Floral, elegant and balanced.</i>
     <br>
     <br>
     <br>
-    <b>Sweet Pearls</b> | Variety: Jin Xuan “Milk Oolong”
+    <b>Sweet Pearls</b>
     <br>Origin: Alishan, Chiayi, Taiwan | Altitude: 800-1000 metres above sea level
-    <br><i>Lightly toasted, with hints of molasses and sweet popcorn.</i>
+    <br><i>This Jin Xuan milk oolong tea is from the most celebrated tea region of Taiwan, Alishan. Lightly toasted, with hints of molasses and sweet popcorn, .</i>
     <br>
     <br>
     <br>
-    <b>Icy Peak</b> | Variety: Qingxin (lit. ‘green heart’)
+    <b>Icy Peak</b>
     <br>Origin: Lugu, Nantou, Taiwan | Altitude: 600-800 metres above sea level
-    <br><i>Roasted, full-bodied and warming, with a long finish of lingering sweetness reminiscent of honey, cacao, and melon.</i>
+    <br><i>Roasted, full-bodied and warming, this Dong Ding oolong tea serves a long finish of lingering sweetness reminiscent of honey, cacao, and melon.</i>
 </Layout>
