--- a/src/components/Hamburger.astro
+++ b/src/components/Hamburger.astro
@@ -46,7 +46,8 @@
 
     a {
         background-color: transparent;
-        color: #695651;
+        /* color: #695651; */
+        color: #e6fbf1;
         text-decoration: none;
         text-decoration-thickness: 1px;
         text-underline-offset: 3px;
@@ -74,7 +75,8 @@
         padding: 0;
         width: 30px;
         height: 2px;
-        background-color: #695651;
+        /* background-color: #695651; */
+        background-color: #e6fbf1;
         display: block;
         border-radius: 4px;
         transition: all 0.3s ease-out;
@@ -110,15 +112,16 @@
         transform: rotate(45deg);
         height: 2px;
         width: 42px;
+        background-color: #fe0030;
     }
 
-    .checkbox3:checked + label > .hamburger3 > .bar3 {
+    .checkbox3:checked + label > .hamburger3 > .bar2 {
         transform: rotate(45deg);
         height: 2px;
         background-color: transparent;
     }
 
-    .checkbox3:checked + label > .hamburger3 > .bar2 {
+    .checkbox3:checked + label > .hamburger3 > .bar3 {
         transform: rotate(-45deg);
         height: 2px;
         background-color: transparent;
@@ -128,12 +131,7 @@
         transform: rotate(-45deg);
         height: 2px;
         width: 42px;
-    }
-
-    .checkbox3:checked + label > .hamburger3 > .bar4 {
-        transform: rotate(-45deg);
-        height: 2px;
-        width: 42px;
+        background-color: #fe0030;
     }
 
     .menu-content {
