adjust top margin for mobile view

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -37,12 +37,13 @@ import Menu from '../components/Hamburger.astro';
 		font-weight: 400;
 		letter-spacing: .075rem;
 		line-height: 1.5;
-		padding: 80px;
+		padding: 30px;
 		text-align: center;
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		flex-direction: column;
+		margin-top: 80px;
 	}
 	img {
 		align-self: center;
