--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ import Menu from '../components/Hamburger.astro';
 		<meta name="generator" content={Astro.generator} />
 		<title>Formosa Tea</title>
 	</head>
-	<body style="background-color:#171c27;"> <!-- #F2F0EF -->
+	<body style="background-color:#171c27;">
 		<img id="background" src={background.src} alt="" fetchpriority="high" />
 		<a href="/"
 				><img src={teaLogo.src} width="400" height="400" alt="Formosa Tea" /></a>
@@ -27,7 +27,6 @@ import Menu from '../components/Hamburger.astro';
 		align-items: center;
 	}
 	body {
-		/* color: #695651;  */
 		color: #e6fbf1;
 		font-family: HelveticaNeue-Light,"Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,sans-serif;
 		height: 80vh auto;
