--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -2,5 +2,5 @@
 import Layout from '../layouts/Layout.astro';
 ---
 <Layout>
-     <b>hello@formosatea.club</b>
+     hello@formosatea.club
 </Layout>
