--- a/src/pages/tea.astro
+++ b/src/pages/tea.astro
@@ -17,11 +17,17 @@ import Layout from '../layouts/Layout.astro';
     <br>
     <b>Sweet Pearls</b>
     <br>Origin: Alishan, Chiayi, Taiwan | Altitude: 800-1000 metres above sea level
-    <br><i>This Jin Xuan milk oolong tea is from the most celebrated tea region of Taiwan, Alishan. Lightly toasted, with hints of molasses and sweet popcorn, .</i>
+    <br><i>This Jin Xuan milk oolong tea is from the most celebrated tea region of Taiwan - the mist-shrouded Alishan. Lightly toasted, with hints of molasses and sweet popcorn, .</i>
     <br>
     <br>
     <br>
     <b>Icy Peak</b>
     <br>Origin: Lugu, Nantou, Taiwan | Altitude: 600-800 metres above sea level
     <br><i>Roasted, full-bodied and warming, this Dong Ding oolong tea serves a long finish of lingering sweetness reminiscent of honey, cacao, and melon.</i>
+    <br>
+    <br>
+    <br>
+    <b>Amber Twists<b>
+    <br>Origin: Lalashan, Taoyuan, Taiwan | Altitude: 1600 metres above sea level
+    <br><i>The full fermentation highlights an warming scent of cypress that forms a dense canopy over Lalashan. A dry and light opening leaves aromas of mellow ripe tree fruit.</i>
 </Layout>
