--- a/src/pages/tea.astro
+++ b/src/pages/tea.astro
@@ -27,7 +27,7 @@ import Layout from '../layouts/Layout.astro';
     <br>
     <br>
     <br>
-    <b>Amber Twists<b>
+    <b>Amber Twists</b>
     <br>Origin: Lalashan, Taoyuan, Taiwan | Altitude: 1600 metres above sea level
     <br><i>The full fermentation highlights an warming scent of cypress that forms a dense canopy over Lalashan. A dry and light opening leaves aromas of mellow ripe tree fruit.</i>
 </Layout>
